# OmniBridge

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  review-final.diff  review-task1.diff  review-task2.diff  review-task3-fix.diff  review-task3.diff  review-task4.diff  review-task5.diff  review-task6-fix.diff  review-task6.diff  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md
crates/ob-capture/: Cargo.toml
crates/ob-capture/src/: frame.rs  lib.rs  screen.rs  window.rs
crates/ob-cli/: Cargo.toml
crates/ob-cli/src/: lib.rs
crates/ob-codec/: Cargo.toml
crates/ob-codec/src/: decoder.rs  encoder.rs  frame_packet.rs  lib.rs
crates/ob-core/: Cargo.toml
crates/ob-core/src/: device.rs  event.rs  layout.rs  lib.rs  protocol.rs  screen.rs  window.rs
crates/ob-discovery/: Cargo.toml
crates/ob-discovery/src/: announcer.rs  lib.rs  mdns.rs
crates/ob-display/: Cargo.toml
crates/ob-display/src/: lib.rs  overlay.rs  renderer.rs
crates/ob-drag/: Cargo.toml
crates/ob-drag/src/: detector.rs  lib.rs  state.rs  transfer.rs
crates/ob-gui/: Cargo.toml
crates/ob-gui/src/: app.rs  lib.rs  settings.rs  tray.rs
crates/ob-input/: Cargo.toml
crates/ob-input/src/: capture.rs  hook.rs  inject.rs  lib.rs
crates/ob-layout/: Cargo.toml
crates/ob-layout/src/: config.rs  edge.rs  lib.rs  topology.rs
crates/ob-network/: Cargo.toml
crates/ob-network/src/: connection.rs  lib.rs  quic.rs  transport.rs  udp.rs
docs/superpowers/plans/: 2026-07-12-full-project-completion.md  2026-07-12-wire-full-pipeline.md
docs/superpowers/specs/: 2026-07-11-wire-full-pipeline-design.md  2026-07-12-hardening-and-drag-flow-design.md
installer/: omnibridge.iss
src/: client.rs  config.rs  main.rs  server.rs
