[package]
name = "ob-codec"
version = "0.1.0"
edition = "2021"

[dependencies]
ob-core = { path = "../ob-core" }
ob-capture = { path = "../ob-capture" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
