[package]
name = "ob-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ob-core = { path = "../ob-core" }
ob-layout = { path = "../ob-layout" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tray-icon = { workspace = true }
eframe = { workspace = true }
hostname = "0.4"
