[package]
name = "ob-network"
version = "0.1.0"
edition = "2021"

[dependencies]
ob-core = { path = "../ob-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
